# AprilTag_MultiPlatform

./: .gitignore  CMakeLists.txt  README.md
apriltag/: CMakeLists.txt  apriltag.h
apriltag/common/: time_util.h  times.c  times.h  workerpool.c
pthreads-win32/: CMakeLists.txt
